src/config/service/worker/sidekiq/snapshots/roadster__config__service__worker__sidekiq__deserialize_tests__sidekiq@case_01.snap
---
source: src/config/service/worker/sidekiq/mod.rs
expression: sidekiq
---
[redis]
uri = 'redis://[Sensitive]'

[redis.enqueue-pool]

[redis.fetch-pool]

[periodic]
stale-cleanup = 'auto-clean-stale'
